--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+	
+		<dependency> 
+	        <groupId>org.glassfish</groupId>
+	        <artifactId>javax.el</artifactId>
+	        <version>3.0.0</version>
+	     </dependency>
+	
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
